Fix duplicated text on footer, export restaurants to his own css. More cleanup on main css. Add transition for restaurants cards on hovers. Fix some media queries text overlap

--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -16,7 +16,7 @@
 /* =========================
     Loader Bar Background
    ========================= */
-@keyframes loaderBarBackground {
+@keyframes cubeLoaderBackground {
   0%,
   100% {
     background-position: var(--x0) var(--y0), var(--x1) var(--y0);
@@ -72,13 +72,17 @@
     opacity: 0;
     transform: translateY(24px);
   }
+  30% {
+    opacity: 0.3;
+    transform: translateY(12px);
+  }
   50% {
     opacity: 0.5;
-    transform: translateY(12px);
+    transform: translateY(6px);
   }
   70% {
     opacity: 0.7;
-    transform: translateY(7.2px);
+    transform: translateY(3px);
   }
   100% {
     opacity: 1;
